--- a/_pages/research.html
+++ b/_pages/research.html
@@ -4,11 +4,44 @@ title: "Research"
 permalink: /research/
 author_profile: true
 ---
+<div class="research-intro">
+  <p>My academic research falls into two main areas: understanding the role of sleep in brain development and exploring how constant exposure to
+    digital technology affects adolescent brain maturatio.
+    A substantial portion of my research leverages machine learning to explore the complex 
+    interactions between sleep, stress, and brain systems in adolescent mental health. 
+    My analyses have shown how social connectedness and sleep patterns predict mental health trajectories during the pandemic. 
+    Additionally, my work with longitudinal deep learning models in mid-to-late adolescence has pinpointed specific predictors of depressive symptoms, 
+    underscoring the value of personalized clinical assessments. </p>
+    
+  <p>Recently, our explainable boosting models demonstrated the clinical utility of wearables by identifying specific sleep thresholds associated with adolescent obesity. 
+    These models equip clinicians with precise metrics to assess individual risk and tailor interventions effectively.
+    I have led research on the effects of emerging alcohol use on adolescent sleep patterns, using a pioneering longitudinal 
+    design that separates alcohol's impact from normative developmental changes in sleep architecture.</p>
+
+
+  <p>My research has also highlighted the crucial role of mindful screen use in shaping adolescent well-being.
+    My research reveals important associations between adolescent screen time, disrupted sleep, and health risks,
+    particularly around bedtime. However, results on experimental, causal relationships are still lacking, 
+    highlighting the need for further research and targeted interventions.</p>
+    
+</div>
 
 {% include base_path %}
 
-
-{% for post in site.research %}
-  {% include archive-single.html %}
-{% endfor %}
-
+<div class="grid__wrapper">
+  {% assign ordered_pages = site.research | sort:"order_number" %}
+  {% for post in ordered_pages %}
+    <div class="grid__item">
+      <a href="{{ post.url | relative_url }}" class="archive__item-link">
+        {% if post.image %}
+          <div class="archive__item-teaser">
+            <img src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+          </div>
+        {% endif %}
+        <h2 class="archive__item-title" itemprop="headline">
+          {{ post.title }}
+        </h2>
+      </a>
+    </div>
+  {% endfor %}
+</div>
