--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,21 +5,21 @@ permalink: /research/
 author_profile: true
 ---
 <div class="research-intro">
-  <p>My academic research falls into two main areas: understanding the role of sleep in brain development and exploring how constant exposure to
-    digital technology affects adolescent brain maturatio.
+  <p>My academic research falls into two main areas: understanding <strong>the role of sleep in brain development</strong> and exploring how constant exposure to
+    <strong>digital technology</strong> affects adolescent brain maturation.
     A substantial portion of my research leverages machine learning to explore the complex 
     interactions between sleep, stress, and brain systems in adolescent mental health. 
-    My analyses have shown how social connectedness and sleep patterns predict mental health trajectories during the pandemic. 
+    My analyses have shown how social connectedness and sleep patterns predict <strong>mental health trajectories</strong> during the pandemic. 
     Additionally, my work with longitudinal deep learning models in mid-to-late adolescence has pinpointed specific predictors of depressive symptoms, 
     underscoring the value of personalized clinical assessments. </p>
-    
-  <p>Recently, our explainable boosting models demonstrated the clinical utility of wearables by identifying specific sleep thresholds associated with adolescent obesity. 
+
+  <p>Recently, our explainable boosting models demonstrated the **clinical utility wearables** by identifying specific sleep thresholds associated with adolescent obesity. 
     These models equip clinicians with precise metrics to assess individual risk and tailor interventions effectively.
-    I have led research on the effects of emerging alcohol use on adolescent sleep patterns, using a pioneering longitudinal 
+    I have led research on <strong>the effects of emerging alcohol use on adolescent sleep patterns</strong>, using a pioneering longitudinal 
     design that separates alcohol's impact from normative developmental changes in sleep architecture.</p>
 
 
-  <p>My research has also highlighted the crucial role of mindful screen use in shaping adolescent well-being.
+  <p>My research has also highlighted the crucial role of **mindful screen use in shaping adolescent well-being.
     My research reveals important associations between adolescent screen time, disrupted sleep, and health risks,
     particularly around bedtime. However, results on experimental, causal relationships are still lacking, 
     highlighting the need for further research and targeted interventions.</p>
