--- a/_pages/research.html
+++ b/_pages/research.html
@@ -13,7 +13,7 @@ author_profile: true
     Additionally, my work with longitudinal deep learning models in mid-to-late adolescence has pinpointed specific predictors of depressive symptoms, 
     underscoring the value of personalized clinical assessments. </p>
 
-  <p>Recently, our explainable boosting models demonstrated the **clinical utility wearables** by identifying specific sleep thresholds associated with adolescent obesity. 
+  <p>Recently, our explainable boosting models demonstrated the <strong>clinical utility wearables</strong> by identifying specific sleep thresholds associated with adolescent obesity. 
     These models equip clinicians with precise metrics to assess individual risk and tailor interventions effectively.
     I have led research on <strong>the effects of emerging alcohol use on adolescent sleep patterns</strong>, using a pioneering longitudinal 
     design that separates alcohol's impact from normative developmental changes in sleep architecture.</p>
